--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
@@ -13,5 +12,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
